--- a/Fitclub_Mohammad Rayan/index.html
+++ b/Fitclub_Mohammad Rayan/index.html
@@ -289,7 +289,7 @@
       </div>
     </footer>
     <div class="footer__bar">
-      Copyright © 2023 Web Design Mastery. All rights reserved.
+      Copyright © 2026 Mohammad Rayan. All rights reserved.
     </div>
   </body>
 </html>
